:art: removed the overflow on the mobile screen projects container to avoid cropping the  projects

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,6 +77,5 @@ button {
   }
   .projects {
     width: 100%;
-    overflow: hidden;
   }
 }
